Add S3 and HTTP identification